Update on "Remove Tensor.h, TensorMethods.h from src/core."
This is a major source of merge conflicts, and AFAICT isn't necessary anymore (it may have been necessary for some mobile build stuff in the past).

This is a commandeer of #25031

Differential Revision: [D17687345](https://our.internmc.facebook.com/intern/diff/D17687345)

[ghstack-poisoned]

--- a/aten/src/ATen/CMakeLists.txt
+++ b/aten/src/ATen/CMakeLists.txt
@@ -460,7 +460,9 @@ FOREACH(HEADER ${generated_h} ${cuda_generated_h})
   INSTALL(FILES ${HEADER} DESTINATION ${AT_INSTALL_INCLUDE_DIR}/ATen)
 ENDFOREACH()
 
+message("AT_INSTALL_INCLUDE_DIR ${AT_INSTALL_INCLUDE_DIR}/ATen/core")
 FOREACH(HEADER ${core_generated_h})
+  message("core header install: ${HEADER}")
   INSTALL(FILES ${HEADER} DESTINATION ${AT_INSTALL_INCLUDE_DIR}/ATen/core)
 ENDFOREACH()
 
