--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1397,7 +1397,8 @@
   use_c10_dispatcher: full
   variants: function
   device_guard: False
-
+  supports_named_tensor: True
+  
 - func: is_distributed(Tensor self) -> bool
   use_c10_dispatcher: full
   variants: function, method
