--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -798,7 +798,8 @@ jobs:
 workflows:
   build:
     jobs:
-      - setup      # Pytorch iOS binary builds
+      - setup
+      # Pytorch iOS binary builds
       - binary_ios_build:
           name: pytorch_ios_10_2_1_nightly_x86_64_build
           build_environment: "libtorch-ios-10.2.1-nightly-x86_64-build"
