Update on "[DO NOT MERGE][IOS] test cocoapods release build"

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -604,6 +604,8 @@ jobs:
     steps:
     - attach_workspace:
         at: ~/workspace
+    - should_run_job
+    - checkout
     - run:
         name: Build
         contxt: org-member
