--- a/.circleci/verbatim-sources/binary-job-specs.yml
+++ b/.circleci/verbatim-sources/binary-job-specs.yml
@@ -238,6 +238,9 @@
           script="/Users/distiller/project/.circleci/scripts/binary_ios_build.sh"
           cat "$script"
           source "$script"
+    - persist_to_workspace:
+        root: /Users/distiller/workspace/
+        paths: ios
   
   binary_ios_upload: 
     <<: *pytorch_ios_params
