--- a/.circleci/verbatim-sources/pytorch-job-specs.yml
+++ b/.circleci/verbatim-sources/pytorch-job-specs.yml
@@ -134,4 +134,5 @@ jobs:
           no_output_timeout: "90m"
           command: |
             set -ex
-            echo "Hello world!"
+            choco install miniconda3
+            python --version
