--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -422,7 +422,8 @@ jobs:
           no_output_timeout: "90m"
           command: |
             set -ex
-            echo "Hello world!"
+            choco install miniconda3
+            python --version
   caffe2_linux_build:
     <<: *caffe2_params
     machine:
