--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -422,8 +422,11 @@ jobs:
           no_output_timeout: "90m"
           command: |
             set -ex
+            nvidia-smi
             choco install miniconda3
+            export PATH="C:\tools\miniconda3\Scripts:C:\tools\miniconda3:C:\Program Files\NVIDIA Corporation\NVSMI":$PATH
             python --version
+            conda install -yq -c pytorch pytorch
   caffe2_linux_build:
     <<: *caffe2_params
     machine:
