--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -148,7 +148,7 @@
   self: grad
 
 - name: angle(Tensor self) -> Tensor
-  self: grad.to(self.scalar_type()) * (self*Scalar((0.0,1.0))).conj() / self.abs().pow(2)
+  self: grad.to(self.scalar_type()) * (self*Scalar(std::complex<double>{0.0, 1.0})).conj() / self.abs().pow(2)
 
 # The four items below are necessary because TensorIterator doesn't work on
 # Variables (codegen does not unwrap the input Tensor for all() and any() ).
@@ -395,7 +395,7 @@
   self: not_implemented("histc")
 
 - name: imag(Tensor self) -> Tensor
-  self: Scalar((0.0,1.0))*grad.to(self.scalar_type())
+  self: Scalar(std::complex<double>{0.0, 1.0})*grad.to(self.scalar_type())
 
 - name: index.Tensor(Tensor self, Tensor?[] indices) -> Tensor
   self: index_backward(zeros_like(self), indices, grad)
