--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -426,9 +426,9 @@ jobs:
             export PATH="C:\tools\miniconda3\Scripts":$PATH
             export PATH="C:\tools\miniconda3":$PATH
             export PATH="C:\Program Files\NVIDIA Corporation\NVSMI":$PATH
-            nvidia-smi
-            python --version
-            conda install -yq -c pytorch pytorch
+            ls
+            .jenkins/pytorch/win-build.sh
+
   caffe2_linux_build:
     <<: *caffe2_params
     machine:
