--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1333,7 +1333,7 @@ jobs:
             export PATH="~/anaconda/bin:${PATH}"
             source ~/anaconda/bin/activate
             # Install dependencies
-            conda install numpy ninja pyyaml mkl mkl-include setuptools cmake cffi typing requests
+            conda install -y numpy ninja pyyaml mkl mkl-include setuptools cmake cffi typing requests
             # sync submodules
             cd ${PROJ_ROOT}
             git submodule sync
