--- a/.circleci/verbatim-sources/job-specs-custom.yml
+++ b/.circleci/verbatim-sources/job-specs-custom.yml
@@ -443,4 +443,4 @@
             export BUILD_PYTORCH_MOBILE=1
             export IOS_ARCH=${IOS_ARCH}
             export IOS_PLATFORM=${IOS_PLATFORM}
-            unbuffer ${PROJ_ROOT}/scripts/build_ios.sh 2>&1 | ts
+            unbuffer sh|yes ${PROJ_ROOT}/scripts/build_ios.sh 2>&1 | ts
