--- a/.circleci/verbatim-sources/pytorch-job-specs.yml
+++ b/.circleci/verbatim-sources/pytorch-job-specs.yml
@@ -49,7 +49,14 @@ jobs:
             NAMED_FLAG="export BUILD_NAMEDTENSOR=1"
           fi
 
-          export COMMAND='((echo "export BUILD_ENVIRONMENT=${BUILD_ENVIRONMENT}" && echo '"$NAMED_FLAG"' && echo "source ./workspace/env" && echo "sudo chown -R jenkins workspace && cd workspace && .jenkins/pytorch/build.sh") | docker exec -u jenkins -i "$id" bash) 2>&1'
+          if [[ ${BUILD_ENVIRONMENT} == *"parallel_tbb"* ]]; then
+            export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
+          elif [[ ${BUILD_ENVIRONMENT} == *"parallel_native"* ]]; then
+            export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE "
+          fi
+          echo "Parallel backend flags: "${PARALLEL_FLAGS}
+
+          export COMMAND='((echo "export BUILD_ENVIRONMENT=${BUILD_ENVIRONMENT}" && echo '"$NAMED_FLAG"' && echo '"$PARALLEL_FLAGS"' && echo "source ./workspace/env" && echo "sudo chown -R jenkins workspace && cd workspace && .jenkins/pytorch/build.sh") | docker exec -u jenkins -i "$id" bash) 2>&1'
           echo ${COMMAND} > ./command.sh && unbuffer bash ./command.sh | ts
 
           # Push intermediate Docker image for next phase to use
@@ -103,9 +110,9 @@ jobs:
             export COMMIT_DOCKER_IMAGE=$output_image
           fi
           if [[ ${BUILD_ENVIRONMENT} == *"parallel_tbb"* ]]; then
-            export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1"
+            export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
           elif [[ ${BUILD_ENVIRONMENT} == *"parallel_native"* ]]; then
-            export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE"
+            export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE ß"
           fi
           echo "Parallel backend flags: "${PARALLEL_FLAGS}
           echo "DOCKER_IMAGE: "${COMMIT_DOCKER_IMAGE}
