--- a/.circleci/verbatim-sources/job-specs-custom.yml
+++ b/.circleci/verbatim-sources/job-specs-custom.yml
@@ -446,5 +446,14 @@
             unbuffer ${PROJ_ROOT}/scripts/build_ios.sh 2>&1 | ts
             # run test on X86 build
             if [ ${IOS_PLATFORM} = "SIMULATOR" ]; then
+              if ! [ -x "$(command -v xcodebuild)" ]; then
+                echo 'Error: xcodebuild is not installed.' >&2
+                exit 1
+              fi 
+              sudo gem install xcodeproj
               ruby ${PROJ_ROOT}/scripts/xcode_ios_x86_build.rb -i ${PROJ_ROOT}/build_ios/install/lib -x ${PROJ_ROOT}/ios/TestApp/TestApp.xcodeproj
+              if [ "$?" -eq "0" ]; then
+                  echo 'xcodebuild failed!'
+                  exit 1
+              fi
             fi
