--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ jobs:
           set -e
           # Pull Docker image and run build
           echo "DOCKER_IMAGE: "${DOCKER_IMAGE}
-          time docker pull ${DOCKER_IMAGE} >/dev/null
+          docker pull ${DOCKER_IMAGE} >/dev/null
           export id=$(docker run -t -d -w /var/lib/jenkins ${DOCKER_IMAGE})
 
           # TODO We may want to move the rebase logic to a separate step after checkout
@@ -337,7 +337,14 @@ jobs:
             NAMED_FLAG="export BUILD_NAMEDTENSOR=1"
           fi
 
-          export COMMAND='((echo "export BUILD_ENVIRONMENT=${BUILD_ENVIRONMENT}" && echo '"$NAMED_FLAG"' && echo "source ./workspace/env" && echo "sudo chown -R jenkins workspace && cd workspace && .jenkins/pytorch/build.sh") | docker exec -u jenkins -i "$id" bash) 2>&1'
+          if [[ ${BUILD_ENVIRONMENT} == *"parallel_tbb"* ]]; then
+            export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
+          elif [[ ${BUILD_ENVIRONMENT} == *"parallel_native"* ]]; then
+            export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE "
+          fi
+          echo "Parallel backend flags: "${PARALLEL_FLAGS}
+
+          export COMMAND='((echo "export BUILD_ENVIRONMENT=${BUILD_ENVIRONMENT}" && echo '"$NAMED_FLAG"' && echo '"$PARALLEL_FLAGS"' && echo "source ./workspace/env" && echo "sudo chown -R jenkins workspace && cd workspace && .jenkins/pytorch/build.sh") | docker exec -u jenkins -i "$id" bash) 2>&1'
           echo ${COMMAND} > ./command.sh && unbuffer bash ./command.sh | ts
 
           # Push intermediate Docker image for next phase to use
@@ -363,7 +370,7 @@ jobs:
               export COMMIT_DOCKER_IMAGE=$output_image
             fi
             docker commit "$id" ${COMMIT_DOCKER_IMAGE}
-            time docker push ${COMMIT_DOCKER_IMAGE}
+            docker push ${COMMIT_DOCKER_IMAGE}
           fi
 
   pytorch_linux_test:
@@ -390,17 +397,23 @@ jobs:
           else
             export COMMIT_DOCKER_IMAGE=$output_image
           fi
+          if [[ ${BUILD_ENVIRONMENT} == *"parallel_tbb"* ]]; then
+            export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
+          elif [[ ${BUILD_ENVIRONMENT} == *"parallel_native"* ]]; then
+            export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE ß"
+          fi
+          echo "Parallel backend flags: "${PARALLEL_FLAGS}
           echo "DOCKER_IMAGE: "${COMMIT_DOCKER_IMAGE}
-          time docker pull ${COMMIT_DOCKER_IMAGE} >/dev/null
+          docker pull ${COMMIT_DOCKER_IMAGE} >/dev/null
           if [ -n "${USE_CUDA_DOCKER_RUNTIME}" ]; then
             export id=$(docker run --runtime=nvidia -t -d -w /var/lib/jenkins ${COMMIT_DOCKER_IMAGE})
           else
             export id=$(docker run -t -d -w /var/lib/jenkins ${COMMIT_DOCKER_IMAGE})
           fi
           if [[ ${BUILD_ENVIRONMENT} == *"multigpu"* ]]; then
-            export COMMAND='((echo "export BUILD_ENVIRONMENT=${BUILD_ENVIRONMENT}" && echo "${NAMED_FLAG}" && echo "source ./workspace/env" && echo "sudo chown -R jenkins workspace && cd workspace && .jenkins/pytorch/multigpu-test.sh") | docker exec -u jenkins -i "$id" bash) 2>&1'
+            export COMMAND='((echo "export BUILD_ENVIRONMENT=${BUILD_ENVIRONMENT}" && echo "${NAMED_FLAG}" && echo "${PARALLEL_FLAGS}" && echo "source ./workspace/env" && echo "sudo chown -R jenkins workspace && cd workspace && .jenkins/pytorch/multigpu-test.sh") | docker exec -u jenkins -i "$id" bash) 2>&1'
           else
-            export COMMAND='((echo "export BUILD_ENVIRONMENT=${BUILD_ENVIRONMENT}" && echo "${NAMED_FLAG}" && echo "source ./workspace/env" && echo "sudo chown -R jenkins workspace && cd workspace && .jenkins/pytorch/test.sh") | docker exec -u jenkins -i "$id" bash) 2>&1'
+            export COMMAND='((echo "export BUILD_ENVIRONMENT=${BUILD_ENVIRONMENT}" && echo "${NAMED_FLAG}" && echo "${PARALLEL_FLAGS}" && echo "source ./workspace/env" && echo "sudo chown -R jenkins workspace && cd workspace && .jenkins/pytorch/test.sh") | docker exec -u jenkins -i "$id" bash) 2>&1'
           fi
           echo ${COMMAND} > ./command.sh && unbuffer bash ./command.sh | ts
   caffe2_linux_build:
@@ -1518,6 +1531,11 @@ workflows:
           name: pytorch_linux_xenial_py3_5_build
           requires:
             - setup
+          filters:
+            branches:
+              only:
+                - master
+                - /ci-all\/.*/
           build_environment: "pytorch-linux-xenial-py3.5-build"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.5:347"
       - pytorch_linux_test:
@@ -1525,6 +1543,11 @@ workflows:
           requires:
             - setup
             - pytorch_linux_xenial_py3_5_build
+          filters:
+            branches:
+              only:
+                - master
+                - /ci-all\/.*/
           build_environment: "pytorch-linux-xenial-py3.5-test"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.5:347"
           resource_class: large
@@ -1613,6 +1636,50 @@ workflows:
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.6-gcc5.4:347"
           resource_class: large
       - pytorch_linux_build:
+          name: pytorch_tbb_linux_xenial_py3_6_gcc5_4_build
+          requires:
+            - setup
+          build_environment: "pytorch-tbb-linux-xenial-py3.6-gcc5.4-build"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-tbb-linux-xenial-py3.6-gcc5.4:347"
+      - pytorch_linux_test:
+          name: pytorch_tbb_linux_xenial_py3_6_gcc5_4_test
+          requires:
+            - setup
+            - pytorch_tbb_linux_xenial_py3_6_gcc5_4_build
+          build_environment: "pytorch-tbb-linux-xenial-py3.6-gcc5.4-test"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-tbb-linux-xenial-py3.6-gcc5.4:347"
+          resource_class: large
+      - pytorch_linux_test:
+          name: pytorch_linux_backward_compatibility_check_test
+          requires:
+            - setup
+            - pytorch_tbb_linux_xenial_py3_6_gcc5_4_build
+          build_environment: "pytorch-linux-backward-compatibility-check-test"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-tbb-linux-xenial-py3.6-gcc5.4:347"
+          resource_class: large
+      - pytorch_linux_build:
+          name: pytorch_native_linux_xenial_py3_6_gcc5_4_build
+          requires:
+            - setup
+          build_environment: "pytorch-native-linux-xenial-py3.6-gcc5.4-build"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-native-linux-xenial-py3.6-gcc5.4:347"
+      - pytorch_linux_test:
+          name: pytorch_native_linux_xenial_py3_6_gcc5_4_test
+          requires:
+            - setup
+            - pytorch_native_linux_xenial_py3_6_gcc5_4_build
+          build_environment: "pytorch-native-linux-xenial-py3.6-gcc5.4-test"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-native-linux-xenial-py3.6-gcc5.4:347"
+          resource_class: large
+      - pytorch_linux_test:
+          name: pytorch_linux_backward_compatibility_check_test
+          requires:
+            - setup
+            - pytorch_native_linux_xenial_py3_6_gcc5_4_build
+          build_environment: "pytorch-linux-backward-compatibility-check-test"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-native-linux-xenial-py3.6-gcc5.4:347"
+          resource_class: large
+      - pytorch_linux_build:
           name: pytorch_linux_xenial_py3_6_gcc7_build
           requires:
             - setup
@@ -1663,6 +1730,34 @@ workflows:
             - pytorch_namedtensor_linux_xenial_py3_clang5_asan_build
           build_environment: "pytorch-namedtensor-linux-xenial-py3-clang5-asan-test"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3-clang5-asan:347"
+          resource_class: large
+      - pytorch_linux_build:
+          name: pytorch_tbb_linux_xenial_py3_clang5_asan_build
+          requires:
+            - setup
+          build_environment: "pytorch-tbb-linux-xenial-py3-clang5-asan-build"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-tbb-linux-xenial-py3-clang5-asan:347"
+      - pytorch_linux_test:
+          name: pytorch_tbb_linux_xenial_py3_clang5_asan_test
+          requires:
+            - setup
+            - pytorch_tbb_linux_xenial_py3_clang5_asan_build
+          build_environment: "pytorch-tbb-linux-xenial-py3-clang5-asan-test"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-tbb-linux-xenial-py3-clang5-asan:347"
+          resource_class: large
+      - pytorch_linux_build:
+          name: pytorch_native_linux_xenial_py3_clang5_asan_build
+          requires:
+            - setup
+          build_environment: "pytorch-native-linux-xenial-py3-clang5-asan-build"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-native-linux-xenial-py3-clang5-asan:347"
+      - pytorch_linux_test:
+          name: pytorch_native_linux_xenial_py3_clang5_asan_test
+          requires:
+            - setup
+            - pytorch_native_linux_xenial_py3_clang5_asan_build
+          build_environment: "pytorch-native-linux-xenial-py3-clang5-asan-test"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-native-linux-xenial-py3-clang5-asan:347"
           resource_class: large
       - pytorch_linux_build:
           name: pytorch_xla_linux_xenial_py3_6_clang7_build
