Update on "[DO NOT MERGE][IOS] add test job for iOS simulator build"

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -861,7 +861,7 @@ jobs:
               exit 1
             fi 
             ruby ${PROJ_ROOT}/scripts/xcode_ios_x86_build.rb -i ${PROJ_ROOT}/build_ios/install -x ${PROJ_ROOT}/ios/TestApp/TestApp.xcodeproj -p ${IOS_PLATFORM}
-            if [ "$?" -eq "0" ]; then
+            if ! [ "$?" -eq "0" ]; then
               echo 'xcodebuild failed!'
               exit 1
             fi
