--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -882,11 +882,13 @@ workflows:
           name: pytorch_ios_10_2_1_x86_64_build
           build_environment: "pytorch-ios-10.2.1-x86_64_build"
           ios_platform: "SIMULATOR"
+          ios_arch: "x86_64"
           requires:
             - setup
       - pytorch_ios_build:
           name: pytorch_ios_10_2_1_arm64_build
           build_environment: "pytorch-ios-10.2.1-arm64_build"
           ios_arch: "arm64"
+          ios_platform: "OS"
           requires:
             - setup
