--- a/.circleci/verbatim-sources/caffe2-job-specs.yml
+++ b/.circleci/verbatim-sources/caffe2-job-specs.yml
@@ -139,6 +139,7 @@
             export IN_CIRCLECI=1
 
             brew install cmake
+            brew install libomp # hilariously, installs python
 
             # Reinitialize submodules
             git submodule sync && git submodule update -q --init --recursive
