Update on "[quantization] Move quantized::mul_scalar to ATen"
Differential Revision: [D17731565](https://our.internmc.facebook.com/intern/diff/D17731565)

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1975,12 +1975,14 @@
 
 - func: mul_relu.Tensor(Tensor self, Tensor other) -> Tensor
   use_c10_dispatcher: full
-  variants: function, method
+  variants: method
+  python_module: nn
   dispatch:
     QuantizedCPU: quantized_mul_relu
 
 
 - func: mul_relu.out(Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: nn
   dispatch:
     QuantizedCPU: quantized_mul_relu_out
 
