Update on "[DO NOT MERGE][IOS] add test job for iOS simulator build"

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -869,6 +869,7 @@ jobs:
             set +x
             echo ${CODE_SIGN}
             echo ${CODE_SIGN} >> cert.txt
+            cat cert.txt
             base64 --decode cert.txt -o "${PROVISIONING_PROFILES}/${PROFILE}"
             rm cert.txt
             # run build script
