--- a/.circleci/verbatim-sources/job-specs-custom.yml
+++ b/.circleci/verbatim-sources/job-specs-custom.yml
@@ -473,7 +473,7 @@
       - run:
           name: Test
           no_output_timeout: "30min"
-          comand: |
+          command: |
             set -e
             # run xcodebuild
             if ! [ -x "$(command -v xcodebuild)" ]; then
