Update on "[DO NOT MERGE][IOS] add test job for iOS simulator build"

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -886,6 +886,7 @@ jobs:
           no_output_timeout: "30m"
           command: |
             set -e
+            PROJ_ROOT=/Users/distiller/project
             # run xcodebuild
             if ! [ -x "$(command -v xcodebuild)" ]; then
               echo 'Error: xcodebuild is not installed.'
