--- a/.circleci/verbatim-sources/job-specs-custom.yml
+++ b/.circleci/verbatim-sources/job-specs-custom.yml
@@ -475,6 +475,7 @@
           no_output_timeout: "30m"
           command: |
             set -e
+            PROJ_ROOT=/Users/distiller/project
             # run xcodebuild
             if ! [ -x "$(command -v xcodebuild)" ]; then
               echo 'Error: xcodebuild is not installed.'
